# programming-workshop

./: README.md
tp1_sockets/: CMakeLists.txt  board.c  board.h  client.c  client.h  main.c  protocol.c  protocol.h  server.c  server.h  socket.c  socket.h  sudoku.c  sudoku.h  tp
tp3_ftp_multiclient_server/: CMakeLists.txt  Client.h  Command.h  Config.h  Protocol.h  Socket.h  client  client0.in  client1.in  client_main.cpp  common_client.cpp  common_command.cpp  common_config.cpp  common_error.cpp  common_error.h  common_protocol.cpp  common_server.cpp  common_server.h  common_socket.cpp  server  server_main.cpp
